2007-06-25  Vee Satayamas <vsatayamas@gmail.com>
  * app/models/article.php: journal style article ordering 
  * app/controllers/articles_controller.php,
    app/views/articles/view.thtml: fix need_checking bug

2007-06-12  Vee Satayamas <vsatayamas@gmail.com>
  * app/models/user.php,
    app/models/article.php: add relation to reservation   
  * app/controllers/articles_controller.php,
    app/views/articles/view.thtml,
    app/views/articles/index.thtml: add reservation with reserver
    and expected submission date
  * create_mysql.sql: update sql for creating tables.

2007-06-11  Vee Satayamas <vsatayamas@gmail.com>
  * relicense to GPL v2

2007-06-09  Vee Satayamas <vsatayamas@gmail.com>
  * controllers/users_controllers.php, 
    view/user/users/login.thtml: remove captcha from login page

2007-06-08  Vee Satayamas <vsatayamas@gmail.com>
  * controllers/articles_controller.php: add log when people try to editing article
  * cake/app_controller.php: add getUsername (for using in logging)

2007-06-07  Vee Satayamas <vsatayamas@gmail.com>
  * views/articles/view.thtml, 
    models/article.php, 
    controllers/articles_controller.php: Add new status modification 
		method in order to fix status modification bug

2007-06-02  Vee Satayamas <vsatayamas@gmail.com>
  * app/controllers/users_controller.php: fix register bug
  * app/controllers/users_controller.php: fix register bug
  * app/webroot/css/basa.css: new css for basa-asa
  * app/view/layouts/default.thtml: add "BETA" and support e-mail
  * app/webroot/img/prachatai_en.png, 
    app/view/layouts/default.thtml: add Prachatai-En banner and link

2007-05-28  Vee Satayamas <vsatayamas@gmail.com>
  * app/views/articles/view.thtml, app/views/articles/index.thtml, create_mysql.sql: change "ready" status to "reserved".

2007-05-24  Vee Satayamas <vsatayamas@gmail.com>
  * app/views/layouts/default.thtml: display username
  * cake/app_controller.php: fix checkAdmin and checkSession